---- Changes since 1.160 ----
Added buttons on main page for stopping, starting and re-starting Squid.
Added support for editing the refresh_pattern directive.
---- Changes since 1.170 ----
Added icon for setting up transparent proxying, by creating needed firewall rules and Squid directives.
---- Changes since 1.180 ----
An interface to listen on for transparent proxying can now be selected instead of specifying a network address.
---- Changes since 1.200 ----
When creating an ACL, an external filename can be specified for storing the matching values.
---- Changes since 1.270 ----
Added a form on the Clear and Rebuild Cache page for removing a single URL. This only appears if the squidclient program is installed.
Added checkboxes and buttons for deleting multiple delay pools, refresh rules, other caches, proxy restrictions and ICP restrictions at once.
---- Changes since 1.290 ----
Added support for Squid 2.6, including the new logformat and access_log directives for specifying multiple custom log files.
---- Changes since 1.340 ----
Fixed transparent proxy setup in Squid 2.6.
---- Changes since 1.380 ----
Added support for editing proxy reply restrictions, thanks to Steve Williams.
Re-design the Access Control page to use tabs, to better split up the lists of ACLs, HTTP and ICP restrictions.
Ensure that HTTP and ICP restrictions are created after ACLs in the config file.
---- Changes since 1.390 ----
The httpd_accel family of directives are no longer shown when using Squid versions 2.6 and above (as they have been deprecated).
Directives that refer to ACLs like http_access are no longer re-positioned in the configuration file unless necessary.
---- Changes since 1.400 ----
Use the cache directive instead of no_cache for Squid 2.6.
Allow request and reply headers access control rules to be configured separately in Squid 3.0.
Added a page for editing cache manager passwords and the actions that they apply to.